fixed h1 spacing

--- a/styles.css
+++ b/styles.css
@@ -515,6 +515,7 @@ footer {
 	h3,
 	h4 {
 		font-size: 3.5em;
+		padding-bottom: 5%;
 	}
 
 	h1 {
